# dataguard-sg

./: .coverage  .flake8  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
contracts/: generate_schema.py  transaction_contract.json
data/output/: lineage_log.jsonl
src/dataguard/: alerts.py  ge_validator.py  lineage.py  loader.py  logger.py  main.py  models.py  pipeline.py  profiler.py  reconciliation.py  validator.py
tests/contract/: test_data_contract.py
tests/integration/: test_pipeline_integration.py
tests/unit/: test_alerts.py  test_models.py  test_reconciliation.py  test_validator.py
