[build-system]
requires = ["hatchling", "setuptools<82"]
build-backend = "hatchling.build"

[project]
name = "dataguard-sg"
version = "0.1.0"
description = "Production data quality pipeline for financial transactions"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.2.0",
    "pydantic>=2.0.0",
    "great-expectations>=1.0.0",
    "fg-data-profiling>=4.15.0",
    "pyarrow>=15.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "great_expectations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "dataguard.ge_validator"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["src/dataguard"]